# kode

./: Cargo.toml  PRD.md  PROGRESS.md
assets/: icon.icns
config/: default.toml  keybindings.toml
config/themes/: dark.toml
crates/kode-app/: Cargo.toml
crates/kode-app/src/: app.rs  cli.rs  main.rs
crates/kode-core/: Cargo.toml
crates/kode-core/src/: color.rs  config.rs  error.rs  event.rs  geometry.rs  lib.rs
crates/kode-editor/: Cargo.toml
crates/kode-editor/src/: buffer.rs  command.rs  cursor.rs  document.rs  history.rs  lib.rs  search.rs  selection.rs
crates/kode-gpu/: Cargo.toml
crates/kode-gpu/src/: compositor.rs  gpu_app.rs  input.rs  lib.rs  project.rs  rect_pipeline.rs  surface.rs  text_render.rs  welcome_screen.rs  window.rs
crates/kode-gpu/src/shaders/: rect.wgsl
crates/kode-keymap/: Cargo.toml
crates/kode-keymap/src/: bindings.rs  lib.rs  mode.rs  motion.rs  operator.rs  parser.rs  text_object.rs  workspace_keys.rs
crates/kode-lsp/: Cargo.toml
crates/kode-lsp/src/: capabilities.rs  client.rs  code_action.rs  completion.rs  diagnostics.rs  goto.rs  hover.rs  jsonrpc.rs  lib.rs  manager.rs  symbols.rs  transport.rs
crates/kode-plugin/: Cargo.toml
crates/kode-plugin/src/: abi.rs  event_bridge.rs  host.rs  lib.rs  manifest.rs  registry.rs
crates/kode-renderer/: Cargo.toml
crates/kode-renderer/src/: atlas.rs  cursor.rs  gutter.rs  lib.rs  pipeline.rs  scrollbar.rs  text.rs
crates/kode-spring/: Cargo.toml
crates/kode-spring/src/: client.rs  graph.rs  lib.rs  types.rs
crates/kode-state/: Cargo.toml
crates/kode-state/src/: app_state.rs  file_explorer.rs  lib.rs
crates/kode-terminal/: Cargo.toml
crates/kode-terminal/src/: emulator.rs  grid.rs  input.rs  lib.rs  pty.rs
crates/kode-treesitter/: Cargo.toml
crates/kode-treesitter/src/: highlight.rs  lib.rs  parser.rs
crates/kode-treesitter/src/languages/: mod.rs
crates/kode-tui/: Cargo.toml
crates/kode-tui/src/: chrome.rs  colors.rs  editor_view.rs  event.rs  event_loop.rs  explorer_view.rs  lib.rs  terminal_view.rs  ui.rs
crates/kode-workspace/: Cargo.toml
crates/kode-workspace/src/: layout.rs  lib.rs  pane.rs  persistence.rs  recent_projects.rs  resize.rs  session.rs  tab.rs
examples/plugins/bracket-colorizer/: Cargo.toml  plugin.toml
examples/plugins/bracket-colorizer/src/: lib.rs
examples/plugins/git-blame/: Cargo.toml  plugin.toml
examples/plugins/git-blame/src/: lib.rs
examples/plugins/kode-plugin-sdk/: Cargo.toml
examples/plugins/kode-plugin-sdk/src/: lib.rs
examples/plugins/todo-highlighter/: Cargo.toml  plugin.toml
examples/plugins/todo-highlighter/src/: lib.rs
kotlin-lsp/: build.gradle.kts  settings.gradle.kts
kotlin-lsp/src/main/kotlin/dev/kode/lsp/: CustomMethodHandler.kt  KodeLspServer.kt  KodeTextDocumentService.kt  KodeWorkspaceService.kt  Main.kt
kotlin-lsp/src/main/kotlin/dev/kode/lsp/gradle/: GradleConnector.kt  TaskRunner.kt
kotlin-lsp/src/main/kotlin/dev/kode/lsp/proxy/: ProcessProxy.kt
kotlin-lsp/src/main/kotlin/dev/kode/lsp/spring/: BeanGraphBuilder.kt  BeanRegistry.kt  ConfigMetadataParser.kt  EndpointIndexer.kt  SpringIndexer.kt  YamlCompleter.kt
scripts/: bundle-macos.sh  create-dmg.sh
