[package]
name = "kode-state"
version.workspace = true
edition.workspace = true

[dependencies]
kode-core = { path = "../kode-core" }
kode-editor = { path = "../kode-editor" }
kode-keymap = { path = "../kode-keymap" }
kode-workspace = { path = "../kode-workspace" }
kode-terminal = { path = "../kode-terminal" }
tracing = { workspace = true }
